Add EXPOSE metadata

--- a/Express/Dockerfile
+++ b/Express/Dockerfile
@@ -6,4 +6,5 @@ COPY --chown=node:node ./package* ./
 RUN npm install
 COPY --chown=node:node ./ ./
 ENV NODE_ENV=development
+EXPOSE 3000
 CMD [ "node", "server.js" ]
