--- a/Django/Dockerfile.prod
+++ b/Django/Dockerfile.prod
@@ -6,7 +6,10 @@ WORKDIR /app
 COPY --chown=app:app ./requirements.txt /app/
 RUN pip install -r /app/requirements.txt; \
     mkdir -p /app/static; \
-    chown -R app:app /app/static
+    chown -R app:app /app/static \
+    python -m compileall; \
+    python -m compileall .
 COPY --chown=app:app . /app/
 USER app
+EXPOSE 8000
 CMD [ "gunicorn", "--bind", "0.0.0.0:8000", "hello_world.wsgi:application" ]
