--- a/Flask/Dockerfile.prod
+++ b/Flask/Dockerfile.prod
@@ -9,4 +9,5 @@ RUN pip install -r /app/requirements.txt; \
     python -m compileall .
 COPY --chown=app:app ./src/ /app/
 USER app
+EXPOSE 5000
 CMD ["gunicorn", "--bind", "0.0.0.0:5000", "main:app"]
