--- a/Django/Dockerfile.prod
+++ b/Django/Dockerfile.prod
@@ -1,12 +1,12 @@
 ARG PYTHON_VERSION
 FROM python:${PYTHON_VERSION}
-RUN useradd --create-home --shell /bin/nologin \
-    --system --home-dir /app app
+RUN useradd --create-home --shell /bin/false \
+    --system --home-dir /app app;
 WORKDIR /app
 COPY --chown=app:app ./requirements.txt /app/
 RUN pip install -r /app/requirements.txt; \
     mkdir -p /app/static; \
-    chown -R app:app /app/static \
+    chown app:app /app/static; \
     python -m compileall; \
     python -m compileall .
 COPY --chown=app:app . /app/
