--- a/django/Dockerfile.prod
+++ b/django/Dockerfile.prod
@@ -7,9 +7,12 @@ COPY --chown=app:app ./requirements.txt /app/
 RUN pip install -r /app/requirements.txt; \
     mkdir -p /app/static; \
     chown app:app /app/static; \
+    apt update; \
+    apt install -y --no-install-recommends postgresql-client; \
     python -m compileall; \
     python -m compileall .
+ENV USE_WSGI=True
 COPY --chown=app:app . /app/
 USER app
 EXPOSE 8000
-CMD [ "gunicorn", "--bind", "0.0.0.0:8000", "hello_world.wsgi:application" ]
+CMD [ "bash", "entrypoint.sh" ]
